syntax = "proto3";
package executor;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nivista/tasktimer/api/v1";

// TIMER
message Timer {
    bytes id = 1;
    string account = 2;
    uint32 execution_count = 3;
    Meta meta = 4;
    TaskConfig task_config = 5;
    ScheduleConfig schedule_config = 6;
}
// END TIMER


message CreateTimer {
    bytes id = 1;
    string account = 2;
    TaskConfig task_config = 3;
    ScheduleConfig schedule_config = 4;
}


// SCHEDULE CONFIG
message ScheduleConfig {
    oneof schedule_config {
        CronConfig cron_config = 1;
        IntervalConfig interval_config = 2;
    }
}

// END SCHEDULE CONFIG

// TASK CONFIG
message TaskConfig {
    oneof task_config {
        HTTPConfig http_config = 1;
    }
}

// END TASK CONFIG


// META 
message Meta {
    google.protobuf.Timestamp create_time = 1;
}
// END META 

// EXECUTOR CONFIGS
enum Method {
    GET = 0;
    POST = 1;
}
message HTTPConfig {
    string url = 1;
    Method method = 2;
    string body = 3;
    repeated string headers = 4;
}
// END EXECUTOR CONFIGS 

// SCHEDULER CONFIGS
message IntervalConfig {
    google.protobuf.Timestamp start_time = 1;
    int32 interval = 2;
    sint32 executions = 3;
}

message CronConfig {
    google.protobuf.Timestamp start_time = 1;
    string cron = 2;
    sint32 executions = 3;
}
// END SCHEDULER CONFIGS